# rustlang-drills

./: .gitignore  README.md
base64/: Cargo.toml
base64/src/: main.rs
blockchain/: Cargo.toml  README.md
blockchain/src/: blockchain.rs  main.rs
calculator/: Cargo.toml
calculator/src/: main.rs
dog/: Cargo.toml
dog/src/: main.rs
encryption/: Cargo.toml  README.md  index.html
encryption/.cargo/: Config.toml
encryption/src/: lib.rs  main.rs
encryption/www/: index.html  package-lock.json  package.json  server.js
encryption/www/public/: encryption.js  encryption_bg.wasm
ggez_scenes/: Cargo.toml
ggez_scenes/src/: main.rs  scene.rs
ggez_scenes/src/scenes/: over.rs  play.rs  start.rs
ggez_scenes/src/states/: mod.rs  over.rs  play.rs  start.rs
gojo/: Cargo.toml
hangman/: Cargo.toml  README.md
hangman/src/: game.rs  main.rs  player.rs
hangman/src/dictionary/: mod.rs  words.txt
hangman/src/game/: mod.rs
hello-world/: helloworld  helloworld.rs
hello_solana/: .gitignore  Cargo.toml  README.md  client.js  package.json
hello_solana/src/: lib.rs
leap/: Cargo.toml
leap/src/: main.rs
linked-list/: README.md
linked-list/src/: main.rs
palindrome/: Cargo.toml
palindrome/src/: main.rs
snake/: .gitignore  Cargo.toml  build_macos.sh  build_windows.sh  macos_launch.sh
snake/resources/: Info.plist  snake.icns
snake/scripts/: build_macos.sh  macos_launch.sh
snake/src/: board.rs  food.rs  game.rs  main.rs  place.rs  scene.rs  size.rs  snake.rs  tile.rs  writer.rs
tetris/: Cargo.toml
tetris/resources/: icon.icns
tetris/scripts/: build.sh  exec.sh
tetris/src/: block.rs  board.rs  bundle.rs  factory.rs  game.rs  main.rs  shapes.rs  square.rs  squares.rs  tetromino.rs  utils.rs
tetris/src/shapes/: i.rs  j.rs  l.rs  mod.rs  o.rs  t.rs  z.rs
