[package]
name = "encryption"
version = "0.1.0"
authors = ["Abraham <cedenoabraham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true

[dependencies]
rand = "0.8.3"
rsa = { version = "0.4.0", features = [ "serde" ]}
sha2 = "0.9.5"
base64 = "0.13.0"
wasm-bindgen = "0.2.74"
aes-gcm = "0.9.1"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.6"
web-sys = { version = "0.3.51", features = [ "console" ] }
# bincode = "1.3.3"
js-sys = "0.3.51"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
wasm-bindgen-test = "0.3.24"