[package]
name = "encryption"
version = "0.1.0"
authors = ["Abraham <cedenoabraham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
#debug = true
lto = true
opt-level = 's'

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[dependencies]
rand = "0.8.3"
rsa = { version = "0.4.0", features = [ "serde" ]}
sha2 = "0.9.5"
base64 = "0.13.0"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
aes-gcm = { version = "0.9.1", features= ["aes"] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.50", features = [ "console" ] }
js-sys = "0.3.51"
wasm-bindgen-test = "0.3.24"
