[package]
name = "snake"
version = "0.1.0"
resolver = "2"
authors = ["Abraham <cedenoabraham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-type-eq = "0.1.0"
ggez = "0.8.0"
rand = "0.8.5"
smart-default = "0.6.0"
