[package]
name = "snake"
version = "0.1.0"
resolver = "2"
authors = ["Abraham <cedenoabraham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.8.0"
rand = "0.8.5"
smart-default = "0.6.0"
wasm-bindgen = "0.2.83"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "0.2" }
console_error_panic_hook = { version = "0.1.6" }
wee_alloc = { version = "0.4.5" }
